Pievienoju dazas bildes un palaboju kodu

--- a/Google.html
+++ b/Google.html
@@ -1,53 +1,45 @@
-<link href="https://fonts.googleapis.com/css?family=Product Sans"
- rel="stylesheet" type="text/css">
-
 <style>
-    .google-main{
-        font-family: Product Sans;
+    a:link, a:visited{
+        color: #404040;
+        text-decoration: none;
     }
-    .e-rotate {
-        transform: rotate(-45deg);
+    a:hover{
+        text-decoration: underline;
+    }
+    span.a{
+        display: inline-block;
+        width: 100px;
+        height: 10px;
+        padding: 0px;
+        border: 1px solid white;    
+        background-color: white;
     }
     .google-font{
         font-family: Arial;
     }
-    .main-size{
-        font-size: 12px;
+    .google-size{
+        width: 55px;
     }
-    .blue{
-        color: #4285F4;
+    .img-size1{
+        width: 5px;
+        border-radius: 50%;
     }
-    .red{
-        color: #EA4335;
+    .img-size2{
+        width: 6px;
+        border-radius: 50%;
     }
-    .yellow{
-        color: #FBBC05;
-    }
-    .green{
-        color: #34A853;
-    }
-    a:link {
-        color: rgb(50, 50, 50);
-    }
-    a:link {
-        text-decoration: none;
-    }
-    a:hover {
-        text-decoration: underline;
+    .top:hover{
+        color: dimgray;
     }
 </style>
-<!--
-<p>
-<span class="blue font-size: 30">G</span><span class="red">o</span><span class="yellow">o</span><span class="blue">g</span><span class="green">l</span><span class="red">e</span>
-</p>
--->
-
 <div class="google-font">
-    <div style="font-weight: normal;">
-        <p style="font-size: 2.5px;"><a href="#">Gmail</a></p>
-        <p style="font-size: 2.5px;"><a href="#">Images</a></p>
-    </div>
-    <div class="main-size google-main">
-        <h2><span class="blue">G</span><span class="red">o</span><span class="yellow">o</span><span class="blue">g</span><span class="green">l</span><span class="red e-rotate">e</span></h2>
+    <span class="a" style="font-size: 2.5px">
+        <a href="#">Gmail</a>
+        <a href="#">Images</a>
+        <a href="#"><img class="img-size1 top" src="Google Apps.png"></a>
+        <a href="#"><img class="img-size2 top" src="Bobathan.png"></a>
+    </span>
+    <div>
+        <img class="google-size" src="https://www.google.lv/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
     </div>
 </div>
