--- a/Google_homepage.html
+++ b/Google_homepage.html
@@ -14,9 +14,6 @@
         .google-font{
             font-family: Arial;
         }
-        .google-size{
-            width: 55px;
-        }
         .google-apps{
             position: relative;
             top: 9px;
@@ -36,7 +33,7 @@
         .align-left{
             text-align: left;
         }
-        .align-left{
+        .align-right{
             text-align: right;
         }
         .align-top{
@@ -53,25 +50,75 @@
             top: 3px;
             outline: none;
         }
+        .magnifying-glass{
+            padding: 0 5 5 8;
+            padding-top: 14px;
+            width: 15;
+            height: 15;
+        }
+        .search-box {
+            margin: auto;
+            width: 580px;
+            height: 43px;
+            outline: none;
+            border-radius: 25px;
+            border-style: solid;
+            border-width: 2px;
+            border-color: #DFDFDF;
+        }
+        .search-box-text{
+            border: none;
+            outline: none;
+            width: 450;
+            height: 44; 
+            font-size: 16px;
+            vertical-align: top;
+        }
+        .keyboard{
+            padding: 0 5 7 4;
+            padding-top: 14px;
+            width: 19px;
+            height: 11px
+        }
+        .microphone{
+            margin-bottom: 1;
+            margin-left: 15;
+            width: 14px;
+            height: 21px
+        }
     </style>
     <body>
         <div class="google-font align-right">
-            <div class="inline" style="color: #606060">
-                <span>
+            <div style="color: #606060">   
+                <span class="inline" style="font-size: 13px;">
                     <a href="#">Gmail</a>
                 </span>
-                <span>
-                    <a href="#" class="text-orientation">Images</a>
+                <span class="inline" style="font-size: 13px;">
+                    <a href="#">Attēli</a>
                 </span>
                 <span>
-                    <input class="button google-apps" type="image" src="Google Apps.png">
+                    <input class="button google-apps inline" type="image" src="Google Apps.png" alt="Google Apps">
                 </span>
                 <span>
-                    <input class="button user-image" type="image" src="Bobathan.png">
+                    <input class="button user-image inline" type="image" src="Bobathan.png" alt="User image">
                 </span>
             </div>
         </div>
-        <div class="align-center" style="padding-top: 25px;">
-            <input class="button" type="image" src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" style="width: 375px; height: 150px">
-        </div>    
+        <div class="align-center" style="padding-top: 170px;">
+            <input class="button" type="image" src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="Google logo" style="width: 375px; height: 150px">
+        </div>
+        <div class="search-box" style="margin-top: 15px;">
+            <span> 
+                <img class="magnifying-glass" src="Magnifying glass.png" alt="Search">
+            </span>
+            <span>
+                <input class="search-box-text"></input>
+            </span>
+            <span> 
+                <img class="keyboard" src="https://www.gstatic.com/inputtools/images/tia.png" alt="Keyboard">
+            </span>
+            <span> 
+                <img class="microphone" src="Microphone.png" alt="Speech">
+            </span>
+        </div>
     </body>
