Pievienoju Google meklesana un Es ticu veiksmei pogas

--- a/Google_homepage.html
+++ b/Google_homepage.html
@@ -50,6 +50,16 @@
             top: 3px;
             outline: none;
         }
+        .button-middle{
+            padding-left: px;
+            height: 35px;
+            width: 150px;
+            color: #3c4043;
+            font-size: 14px;
+            background-color: #f8f9fa;
+            border-radius: 5px;
+            border: none;
+        }
         .magnifying-glass{
             padding: 0 5 5 8;
             padding-top: 14px;
@@ -119,6 +129,18 @@
             </span>
             <span> 
                 <img class="microphone" src="Microphone.png" alt="Speech">
+            </span>
+        </div>
+        <div style="margin-top: 30px; text-align: center;">
+            <span>
+                <button class="button-middle">
+                    <a href="#" class="">Google meklēšana</a>
+                </button>
+            </span>
+            <span>
+                <button class="button-middle">
+                    <a href="#">Es ticu veiksmei!</a>
+                </button>
             </span>
         </div>
     </body>
