Pievienoju valodas izvēlnes

--- a/Google_homepage.html
+++ b/Google_homepage.html
@@ -97,8 +97,8 @@
             height: 21px
         }
     </style>
-    <body>
-        <div class="google-font align-right">
+    <body class="google-font">
+        <div class="align-right">
             <div style="color: #606060">   
                 <span class="inline" style="font-size: 13px;">
                     <a href="#">Gmail</a>
@@ -142,5 +142,11 @@
                     <a href="#">Es ticu veiksmei!</a>
                 </button>
             </span>
+        </div>
+        <div style="margin-top: 30px ;font-size: 12; text-align: center; -webkit-margin-bottom-collapse: collapse;">
+            Google piedāvājums: 
+            <a style="padding-left: 7px;" href="#">English</a>
+            <a style="padding-left: 7px;" href="#">lietuvių</a>
+            <a style="padding-left: 7px;" href="#">русский</a>
         </div>
     </body>
