Pievienots google majaslapas apaksas teksta dala

--- a/Google_homepage.html
+++ b/Google_homepage.html
@@ -149,4 +149,23 @@
             <a style="padding-left: 7px;" href="#">lietuvių</a>
             <a style="padding-left: 7px;" href="#">русский</a>
         </div>
+        <div>
+            <div style="background-color: #F2F2F2; color: #606060; font-size: 13; width: 100%;padding: 13px 13px 13px 40px; position:fixed; bottom: 47;left: -8px;">
+                Latvija
+            </div>
+            <div style="background-color: #F2F2F2; width: 100%;padding: 15px 15px 15px 25px; position:fixed; bottom: 0; left: -8px; border-top-color: rgb(221, 221, 221); border-top-width: 2px; border-top-style: solid; color: #606060; font-size: 13px;">
+                <span style="text-align: left;">
+                    <a class="bottom-inline" href="#" style="padding-inline: 13px; padding-inline-start: 15px;">Plašāka informācija</a>
+                    <a class="bottom-inline" href="#" style="padding-inline: 13px;">Reklamēšana</a>
+                    <a class="bottom-inline" href="#" style="padding-inline: 13px;">Uzņēmējdarbība</a>
+                    <a class="bottom-inline" href="#" style="padding-inline: 13px;">Kā darbojas meklēšana</a>
+                </span>
+                <span style="float: right;">
+                    <a class="bottom-inline" href="#" style="padding-inline: 13px;">Konfidencialitāte</a>
+                    <a class="bottom-inline" href="#" style="padding-inline: 13px;">Noteikumi</a>
+                    <a class="bottom-inline" href="#" style="padding-inline: 13px; padding-inline-end: 55px;">Iestatijumi</a>
+                </span>
+            </div>
+        </div>
     </body>
+</html>
