Pievienoju Google lapas auksdalu un palaboju dazas kludas

--- a/Google_homepage.html
+++ b/Google_homepage.html
@@ -76,7 +76,7 @@
             border-width: 2px;
             border-color: #DFDFDF;
         }
-        .search-box-text{
+        .search-text{
             border: none;
             outline: none;
             width: 450;
@@ -122,7 +122,7 @@
                 <img class="magnifying-glass" src="Magnifying glass.png" alt="Search">
             </span>
             <span>
-                <input class="search-box-text"></input>
+                <input class="search-text"></input>
             </span>
             <span> 
                 <img class="keyboard" src="https://www.gstatic.com/inputtools/images/tia.png" alt="Keyboard">
@@ -150,11 +150,11 @@
             <a style="padding-left: 7px;" href="#">русский</a>
         </div>
         <div>
-            <div style="background-color: #F2F2F2; color: #606060; font-size: 13; width: 100%;padding: 13px 13px 13px 40px; position:fixed; bottom: 47;left: -8px;">
+            <div style="background-color: #F2F2F2; color: gray; font-size: 13; width: 100%;padding: 20px 20px 20px 40px; position:fixed; bottom: 47;left: -8px;">
                 Latvija
             </div>
-            <div style="background-color: #F2F2F2; width: 100%;padding: 15px 15px 15px 25px; position:fixed; bottom: 0; left: -8px; border-top-color: rgb(221, 221, 221); border-top-width: 2px; border-top-style: solid; color: #606060; font-size: 13px;">
-                <span style="text-align: left;">
+            <div style="background-color: #F2F2F2; width: 100%;padding: 20px 20px 20px 25px; position:fixed; bottom: 0; left: -8px; border-top-color: rgb(221, 221, 221); border-top-width: 2px; border-top-style: solid; color: gray; font-size: 13px;">
+                <span style="text-align: left; color: gray;">
                     <a class="bottom-inline" href="#" style="padding-inline: 13px; padding-inline-start: 15px;">Plašāka informācija</a>
                     <a class="bottom-inline" href="#" style="padding-inline: 13px;">Reklamēšana</a>
                     <a class="bottom-inline" href="#" style="padding-inline: 13px;">Uzņēmējdarbība</a>
