--- a/Google_RVT.html
+++ b/Google_RVT.html
@@ -1,2 +1,157 @@
 <html>
+    <title>RVT - Google meklēšana</title>
+    <style>
+        a:link, a:visited {
+            color: #404040;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .google-font{
+            font-family: Arial;
+        }
+        .inline {
+            padding-inline: 10px;
+        }
+        .button {
+            position: relative;
+            top: 3px;
+            outline: none;
+        }
+        .user-image{
+            position: relative;
+            top: 9px;
+            outline: none;
+            width: 30;
+            height: 30;
+            border-radius: 50%;
+        }
+        .google-apps{
+            position: relative;
+            top: 9px;
+            outline: none;
+            width: 25;
+            height: 30;
+            border-radius: 50%;
+        }
+        .search-box{
+            width: 688px;
+            height: 43px;
+            outline: none;
+            border-radius: 25px;
+            border-style: solid;
+            border-width: 2px;
+            border-color: #DFDFDF;
+        }
+        .search-text{
+            border-radius: 25px;
+            border: none;
+            outline: none;
+            width: 512px;
+            height: 40px; 
+            font-size: 16px;
+            vertical-align: top;
+            padding-left: 19px;
+        }
+        .magnifying-glass{
+            padding: 0 0 2 9;
+            width: 18;
+            height: 18;
+        }
+        .keyboard{
+            padding: 16 0 5 11;
+            width: 19px;
+            height: 11px
+        }
+        .microphone{
+            padding: 0 0 1 18.5;
+            width: 15px;
+            height: 20px
+        }
+        .search-x{
+            padding-bottom: 4;
+            padding-right: 13;
+            padding-left: 10;
+            width: 13px;
+            height: 13px
+        }
+    </style>
+    <body class="google-font">
+        <div>
+            <span style="padding-top: 17px;margin-bottom: 20px;">
+                <input class="button" type="image" src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" style="width: 93px; height: 31px; padding-left: 15; margin-bottom: -2;">
+            </span>
+            <div class="search-box" style="margin-top: 12px; margin-inline-start: 40px; display: inline-block">
+                <span>
+                    <input class="search-text" value="RVT">
+                    </input>
+                </span>
+                <span> 
+                    <a href="#" style="text-decoration-line: none;">
+                        <img class="search-x" src="Search-close.png" alt="search-x">
+                    </a>
+                </span>
+                <span style="border-left: 1px solid #dfdfdf; height: 100%; padding-top: 13; padding-bottom: 1; padding-left: 5;">
+                </span>
+                <span> 
+                    <a href="#" style="text-decoration-line: none;">
+                        <img class="keyboard" src="https://www.gstatic.com/inputtools/images/tia.png" alt="Keyboard">
+                    </a>
+                </span>
+                <span>
+                    <a href="#" style="text-decoration-line: none;">
+                        <img class="microphone" src="Microphone.png" alt="Microphone">
+                    </a>
+                </span>
+                <span>
+                    <a href="#" style="text-decoration-line: none;">
+                        <img class="magnifying-glass" src="Magnifying glass.png" alt="Search">
+                    </a>
+                </span>
+            </div>
+            <div style="float: right; padding: 11 10 0 0 ;">
+                <span class="inline">
+                    <input class="button google-apps" type="image" src="Google Apps.png" width="17px" height="16px" style="padding-bottom: 1;"/>  
+                </span>
+                <span class="inline">
+                    <input class="user-image" type="image" src="Bobathan.png"/>
+                </span>
+            </div>
+            <div style="height: 31; width: 89.7%;margin: 9 0 15 -15; padding: 15 0 0 176; border-bottom-color: #e4e4e4; border-bottom-width: 1px; border-bottom-style: solid;">
+                <span>
+                    <a href="#" style="padding: 15 8 12 11; border-bottom-color: #1a73e8; border-bottom-width: 3px; border-bottom-style: solid; padding-inline: 2text-decoration-line: none; font-size: 13; color: #1a73e8;">
+                        <img src="Magnifying glass.png" alt="Search All" style="width: 14;height: 14; margin-bottom: -2; padding-inline-end: 3px;">
+                        Viss
+                    </a>
+                    <a href="#" style="padding: 16 8 12 11; margin-left: 2px;text-decoration-line: none; font-size: 13">
+                        <img src="Images.png" alt="Atteli" style="width: 14;height: 14; margin-bottom: -2; padding-inline-end: 1px">
+                        Attēli
+                    </a>
+                    <a href="#" style="padding: 15 9 12 11; margin-left: 2px;text-decoration-line: none; font-size: 13">
+                        <img src="Location.png" alt="lokācija" style="width: 16;height: 16; margin-bottom: -3; padding-inline-end: 2px">
+                        Maps
+                    </a>
+                    <a href="#" style="padding: 16 8 12 11; margin-left: 2px;text-decoration-line: none; font-size: 13">
+                        <img src="Video.png" alt="Video" style="width: 14;height: 14; margin-bottom: -2; padding-inline-end: 3px">
+                        Video
+                    </a>
+                    <a href="#" style="padding: 15 3 12 11; margin-left: 2px;text-decoration-line: none; font-size: 13">
+                        <img src="News.png" alt="Ziņas" style="width: 15;height: 15; margin-bottom: -3; padding-inline-end: 3px">
+                        Ziņas
+                    </a>
+                    <a href="#" style="padding: 15 11 12 11; margin-left: 2px; text-decoration-line: none; font-size: 13">
+                        <img src="More.png" alt="Izvēle" style="width: 15;height: 17; margin-bottom: -3; padding-inline-end: 0px">
+                        Vēl
+                    </a>
+                    <a href="#" style="padding: 15 11 12 108; margin-left: 2px;text-decoration-line: none; font-size: 13; width: 15;height: 15; margin-bottom: -1; padding-inline-end: 0px">
+                        Iestatījumi
+                    </a>
+                    <a href="#" style="padding: 15 11 12 8; margin-left: 13px;text-decoration-line: none; font-size: 13; width: 15;height: 15; margin-bottom: -1; padding-inline-end: 0px">
+                        Rīki
+                    </a>
+                </span>
+            </div>
+        </div>
+    </body>
 </html>
