Pievienoju RVT resultatus ar linkiem un papild linkiem

--- a/Google_RVT.html
+++ b/Google_RVT.html
@@ -120,7 +120,7 @@
             </div>
             <div style="height: 31; width: 89.7%;margin: 9 0 15 -15; padding: 15 0 0 176; border-bottom-color: #e4e4e4; border-bottom-width: 1px; border-bottom-style: solid;">
                 <span>
-                    <a href="#" style="padding: 15 8 12 11; border-bottom-color: #1a73e8; border-bottom-width: 3px; border-bottom-style: solid; padding-inline: 2text-decoration-line: none; font-size: 13; color: #1a73e8;">
+                    <a href="#" style="padding: 15 8 12 11; border-bottom-color: #1a73e8; border-bottom-width: 3px; border-bottom-style: solid; padding-inline: 2; text-decoration-line: none; font-size: 13; color: #1a73e8;">
                         <img src="Magnifying glass.png" alt="Search All" style="width: 14;height: 14; margin-bottom: -2; padding-inline-end: 3px;">
                         Viss
                     </a>
@@ -151,6 +151,102 @@
                         Rīki
                     </a>
                 </span>
+            </div>
+        </div>
+        <div style="margin-left: 172; margin-bottom: 20px;">
+            <div style="color: #70757a">
+                Aptuveni 9 490 000 rezultāti (0,67 sekundes)
+            </div>
+            <div style="padding-top: 21; color: #1d1d1d">
+                www.rvt.lv
+            </div>
+            <div>
+                <div style="padding-top: 5;">
+                    <a href="#" style="font-size: 20; color: #1a0dab">
+                        Rīgas Valsts tehnikums
+                    </a>
+                </div>
+                <div>
+                    <p style="width: 510; color: #4d5156; font-size: 14; line-height: 1.55; margin-top: 5; margin-bottom: 2;">
+                        Arī PIKC “<b>Rīgas Valsts tehnikums</b>” Dzelzceļa nodaļa sadarbībā ar ... Raksti uz solveiga.keistere@<b>rvt</b>.lv, lai pieteiktu savu klasi vai skolu uz tiešsaistes karjeras ...
+                    </p>
+                    <div style="color: #70757a; font-size: 14px">
+                    Šo lapu esat apmeklējis daudz reižu. Pēdējā apmeklējuma datums: 20.28.10
+                    </div>
+                </div>
+            </div>
+            <div style="padding: 15 0 0 26">
+                <table>
+                    <tr>
+                        <td style="padding-right: 85">
+                            <div style="padding-top: 5;">
+                                <a href="#" style="font-size: 20; color: #1a0dab">
+                                    Stundu saraksts
+                                </a>
+                            </div>
+                            <p style="width: 220; color: #4d5156; font-size: 14; line-height: 1.55; margin-top: 1; margin-bottom: 2;">
+                                RVT 100 gadi. LATVIJAS DZELCEĻŠ. LDZ. Sociālie tīkli ...
+                            </p>
+                        </td>
+                        <td>
+                            <div style="padding-top: 5;">
+                                <a href="#" style="font-size: 20; color: #1a0dab">
+                                    PIKC RVT e-studijas
+                                </a>
+                            </div>
+                            <p style="width: 220; color: #4d5156; font-size: 14; line-height: 1.55; margin-top: 1; margin-bottom: 2;">
+                                Latviešu ‎(lv)‎. English ‎(en)‎ · Latviešu ‎(lv)‎. PIKC Rīgas ...
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding-right: 85; padding-top: 7;">
+                            <div style="padding-top: 5;">
+                                <a href="#" style="font-size: 20; color: #1a0dab">
+                                    Kontakti
+                                </a>
+                            </div>
+                            <p style="width: 220; color: #4d5156; font-size: 14; line-height: 1.55; margin-top: 1; margin-bottom: 2;">
+                                Direktore Dagnija Vanaga Telefons 67324146 dagnija ...
+                            </p>
+                        </td>
+                        <td style="padding-right: 85; padding-top: 7;">
+                            <div style="padding-top: 5;">
+                                <a href="#" style="font-size: 20; color: #1a0dab">
+                                    Par mums
+                                </a>
+                            </div>
+                            <p style="width: 220; color: #4d5156; font-size: 14; line-height: 1.55; margin-top: 1; margin-bottom: 2;">
+                                RVT īsteno trešā profesionālās kvalifikācijas līmeņa izglītības ...
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding-right: 85; padding-top: 7;">
+                            <div style="padding-top: 5;">
+                                <a href="#" style="font-size: 20; color: #1a0dab">
+                                    Profesijas
+                                </a>
+                            </div>
+                            <p style="width: 220; color: #4d5156; font-size: 14; line-height: 1.55; margin-top: 1; margin-bottom: 2;">
+                                RVT 100 gadi. Sociālie tīkli. PIKC RVT | TV ... Bibliotēka ...
+                            </p>
+                        </td>
+                        <td style="padding-right: 85; padding-top: 7;">
+                            <div style="padding-top: 5;">
+                                <a href="#" style="font-size: 20; color: #1a0dab">
+                                    Mācības
+                                </a>
+                            </div>
+                            <p style="width: 220; color: #4d5156; font-size: 14; line-height: 1.55; margin-top: 1; margin-bottom: 2;">
+                                Profesijas - Uzņemšana - Karjeras izglītība - ...
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+                <a href="#" style="font-size: 14; color: #1a0dab; line-height: 2.3; padding-left: 2;">
+                    Papildinformācija no vietnes rvt.lv »
+                </a>
             </div>
         </div>
     </body>
