Pievienoju attel uznemumus no rezultatiem

--- a/Google_RVT.html
+++ b/Google_RVT.html
@@ -89,7 +89,7 @@
                 </span>
                 <span> 
                     <a href="#" style="text-decoration-line: none;">
-                        <img class="search-x" src="Search-close.png" alt="search-x">
+                        <img class="search-x" src="Images/Search-close.png" alt="search-x">
                     </a>
                 </span>
                 <span style="border-left: 1px solid #dfdfdf; height: 100%; padding-top: 13; padding-bottom: 1; padding-left: 5;">
@@ -101,47 +101,47 @@
                 </span>
                 <span>
                     <a href="#" style="text-decoration-line: none;">
-                        <img class="microphone" src="Microphone.png" alt="Microphone">
+                        <img class="microphone" src="Images/Microphone.png" alt="Microphone">
                     </a>
                 </span>
                 <span>
                     <a href="#" style="text-decoration-line: none;">
-                        <img class="magnifying-glass" src="Magnifying glass.png" alt="Search">
+                        <img class="magnifying-glass" src="Images/Magnifying glass.png" alt="Search">
                     </a>
                 </span>
             </div>
             <div style="float: right; padding: 11 10 0 0 ;">
                 <span class="inline">
-                    <input class="button google-apps" type="image" src="Google Apps.png" width="17px" height="16px" style="padding-bottom: 1;"/>  
+                    <input class="button google-apps" type="image" src="Images/Google Apps.png" width="17px" height="16px" style="padding-bottom: 1;"/>  
                 </span>
                 <span class="inline">
-                    <input class="user-image" type="image" src="Bobathan.png"/>
+                    <input class="user-image" type="image" src="Images/Bobathan.png"/>
                 </span>
             </div>
             <div style="height: 31; width: 89.7%;margin: 9 0 15 -15; padding: 15 0 0 176; border-bottom-color: #e4e4e4; border-bottom-width: 1px; border-bottom-style: solid;">
                 <span>
                     <a href="#" style="padding: 15 8 12 11; border-bottom-color: #1a73e8; border-bottom-width: 3px; border-bottom-style: solid; padding-inline: 2; text-decoration-line: none; font-size: 13; color: #1a73e8;">
-                        <img src="Magnifying glass.png" alt="Search All" style="width: 14;height: 14; margin-bottom: -2; padding-inline-end: 3px;">
+                        <img src="Images/Magnifying glass.png" alt="Search All" style="width: 14;height: 14; margin-bottom: -2; padding-inline-end: 3px;">
                         Viss
                     </a>
                     <a href="#" style="padding: 16 8 12 11; margin-left: 2px;text-decoration-line: none; font-size: 13">
-                        <img src="Images.png" alt="Atteli" style="width: 14;height: 14; margin-bottom: -2; padding-inline-end: 1px">
+                        <img src="Images/Images.png" alt="Atteli" style="width: 14;height: 14; margin-bottom: -2; padding-inline-end: 1px">
                         Attēli
                     </a>
                     <a href="#" style="padding: 15 9 12 11; margin-left: 2px;text-decoration-line: none; font-size: 13">
-                        <img src="Location.png" alt="lokācija" style="width: 16;height: 16; margin-bottom: -3; padding-inline-end: 2px">
+                        <img src="Images/Location.png" alt="lokācija" style="width: 16;height: 16; margin-bottom: -3; padding-inline-end: 2px">
                         Maps
                     </a>
                     <a href="#" style="padding: 16 8 12 11; margin-left: 2px;text-decoration-line: none; font-size: 13">
-                        <img src="Video.png" alt="Video" style="width: 14;height: 14; margin-bottom: -2; padding-inline-end: 3px">
+                        <img src="Images/Video.png" alt="Video" style="width: 14;height: 14; margin-bottom: -2; padding-inline-end: 3px">
                         Video
                     </a>
                     <a href="#" style="padding: 15 3 12 11; margin-left: 2px;text-decoration-line: none; font-size: 13">
-                        <img src="News.png" alt="Ziņas" style="width: 15;height: 15; margin-bottom: -3; padding-inline-end: 3px">
+                        <img src="Images/News.png" alt="Ziņas" style="width: 15;height: 15; margin-bottom: -3; padding-inline-end: 3px">
                         Ziņas
                     </a>
                     <a href="#" style="padding: 15 11 12 11; margin-left: 2px; text-decoration-line: none; font-size: 13">
-                        <img src="More.png" alt="Izvēle" style="width: 15;height: 17; margin-bottom: -3; padding-inline-end: 0px">
+                        <img src="Images/More.png" alt="Izvēle" style="width: 15;height: 17; margin-bottom: -3; padding-inline-end: 0px">
                         Vēl
                     </a>
                     <a href="#" style="padding: 15 11 12 108; margin-left: 2px;text-decoration-line: none; font-size: 13; width: 15;height: 15; margin-bottom: -1; padding-inline-end: 0px">
