--- a/Google_homepage.html
+++ b/Google_homepage.html
@@ -107,10 +107,10 @@
                     <a href="#">Attēli</a>
                 </span>
                 <span>
-                    <input class="button google-apps inline" type="image" src="Google Apps.png" alt="Google Apps">
+                    <input class="button google-apps inline" type="image" src="Images/Google Apps.png" alt="Google Apps">
                 </span>
                 <span>
-                    <input class="button user-image inline" type="image" src="Bobathan.png" alt="User image">
+                    <input class="button user-image inline" type="image" src="Images/Bobathan.png" alt="User image">
                 </span>
             </div>
         </div>
@@ -119,7 +119,7 @@
         </div>
         <div class="search-box" style="margin-top: 15px;">
             <span> 
-                <img class="magnifying-glass" src="Magnifying glass.png" alt="Search">
+                <img class="magnifying-glass" src="Images/Magnifying glass.png" alt="Search">
             </span>
             <span>
                 <input class="search-text"></input>
@@ -128,7 +128,7 @@
                 <img class="keyboard" src="https://www.gstatic.com/inputtools/images/tia.png" alt="Keyboard">
             </span>
             <span> 
-                <img class="microphone" src="Microphone.png" alt="Speech">
+                <img class="microphone" src="Images/Microphone.png" alt="Speech">
             </span>
         </div>
         <div style="margin-top: 30px; text-align: center;">
